// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Navigation renders Navigation component with "Delivery" tab set as Active 1`] = `
.c3 {
  background: #222222;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c6 {
  background: #ffffff;
  color: #b0b0b0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
  pointer-events: all;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

<<<<<<< HEAD
.c2:focus {
  outline: 4px solid #ffbf47;
  outline-offset: -4px;
=======
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
  pointer-events: none;
}

.c5:last-child {
  border-right: 1px solid #b0b0b0;
>>>>>>> master
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
}

.c4 {
  font-weight: 400;
  padding-right: 0.4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c5:first-child {
    border-left: 0;
  }

  .c5:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
  className="c0"
>
  <nav
    className="c1"
  >
    <Link
      className="c2"
      data-testid="navigation-link"
      to="/checkout/delivery"
    >
      <span
        className="c3"
      >
        <span
          className="c4"
        >
          1.
        </span>
        Delivery
      </span>
    </Link>
    <Link
      className="c5"
      data-testid="navigation-link"
      disabled={true}
      to="/checkout/payment"
    >
      <span
        className="c6"
      >
        <span
          className="c4"
        >
          2.
        </span>
        Payment
      </span>
    </Link>
    <Link
      className="c5"
      data-testid="navigation-link"
      disabled={true}
      to="/checkout/review"
    >
      <span
        className="c6"
      >
        <span
          className="c4"
        >
          3.
        </span>
        Review
      </span>
    </Link>
  </nav>
</div>
`;

exports[`COMPONENT - Navigation renders Navigation component with "Payment" tab set as Active 1`] = `
.c5 {
  background: #222222;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c7 {
  background: #ffffff;
  color: #b0b0b0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
  pointer-events: all;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

<<<<<<< HEAD
.c2:focus {
  outline: 4px solid #ffbf47;
  outline-offset: -4px;
=======
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
  pointer-events: none;
}

.c6:last-child {
  border-right: 1px solid #b0b0b0;
>>>>>>> master
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
}

.c4 {
  font-weight: 400;
  padding-right: 0.4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c6:first-child {
    border-left: 0;
  }

  .c6:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
  className="c0"
>
  <nav
    className="c1"
  >
    <Link
      className="c2"
      data-testid="navigation-link"
      to="/checkout/delivery"
    >
      <span
        className="c3"
      >
        <span
          className="c4"
        >
          1.
        </span>
        Delivery
      </span>
    </Link>
    <Link
      className="c2"
      data-testid="navigation-link"
      disabled={false}
      to="/checkout/payment"
    >
      <span
        className="c5"
      >
        <span
          className="c4"
        >
          2.
        </span>
        Payment
      </span>
    </Link>
    <Link
      className="c6"
      data-testid="navigation-link"
      disabled={true}
      to="/checkout/review"
    >
      <span
        className="c7"
      >
        <span
          className="c4"
        >
          3.
        </span>
        Review
      </span>
    </Link>
  </nav>
</div>
`;

exports[`COMPONENT - Navigation renders Navigation component with "Review" tab set as Active 1`] = `
.c5 {
  background: #222222;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
  pointer-events: all;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c2:focus {
  outline: 4px solid #ffbf47;
  outline-offset: -4px;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
}

.c4 {
  font-weight: 400;
  padding-right: 0.4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
  className="c0"
>
  <nav
    className="c1"
  >
    <Link
      className="c2"
      data-testid="navigation-link"
      to="/checkout/delivery"
    >
      <span
        className="c3"
      >
        <span
          className="c4"
        >
          1.
        </span>
        Delivery
      </span>
    </Link>
    <Link
      className="c2"
      data-testid="navigation-link"
      disabled={false}
      to="/checkout/payment"
    >
      <span
        className="c3"
      >
        <span
          className="c4"
        >
          2.
        </span>
        Payment
      </span>
    </Link>
    <Link
      className="c2"
      data-testid="navigation-link"
      disabled={false}
      to="/checkout/review"
    >
      <span
        className="c5"
      >
        <span
          className="c4"
        >
          3.
        </span>
        Review
      </span>
    </Link>
  </nav>
</div>
`;
